--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head> 
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <title>test-js</title> 
+  <title>Homework 8</title> 
+  <link rel="stylesheet"/>
 </head> 
-<body> 
-  <script src="./js/task-1.js" defer></script> 
-  <script src="./js/task-2.js" defer></script> 
-  <script src="./js/task-3.js" defer></script>
+<body>  
+  <ul class="gallery"></ul> 
+  <script src="./js/gallery.js" type="module"></script> 
 </body> 
 </html>
