--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet"/>
 </head> 
 <body>  
-  <ul class="gallery"></ul> 
+  <ul class="gallery">
+    <div class="li"></div>
+    <div class="li"></div>
+    <div class="li"></div>
+  </ul> 
   <script src="./js/gallery.js" type="module"></script> 
 </body> 
 </html>
