--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
   <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>Homework 8</title> 
-  <link rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"/>
+  <link rel="stylesheet" href="./css/styles.css"/>
 </head> 
 <body>  
   <ul class="gallery">
-    <div class="li"></div>
-    <div class="li"></div>
-    <div class="li"></div>
+    <li class="gallery-item">
+      <a class="gallery-link" href="large-image.jpg">
+        <img
+          class="gallery-image"
+          src="small-image.jpg"
+          data-source="large-image.jpg"
+          alt="Image description"
+        />
+      </a>
+    </li>    
   </ul> 
+
+  <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+
   <script src="./js/gallery.js" type="module"></script> 
 </body> 
 </html>
